# template-python-uv

./: LICENSE  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile.dev  compose.dev.yml  devcontainer.json  postCreateCommand.sh
docs/: temp.puml
src/template_python_uv/: main.py
tests/: test_main.py
