[project]
name = "template-python-uv"
version = "0.0.0"
description = "Template Python project with uv"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.13",
    "ty>=0.0.38",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ignore for convenience in development
    "D1",     # pydocstyle D100-D107
    "TD001",  # invalid-todo-tag
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "FIX",    # flake8-fixme FIX001-FIX004
    "ERA001", # commented-out-code
    # ignore typing-only import rules for FastAPI, Pydantic, Dependency Injector etc. 
    "TC001",  # typing-only-first-party-import
    "TC002",  # typing-only-third-party-import
    "TC003",  # typing-only-standard-library-import
    # ignore conflicting lint rules
    # ref: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
]
fixable = ["ALL"]
unfixable = [
    "F401", # unused-import
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # assert
    "INP001", # implicit-namespace-package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist loadscope --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "tests/*",
]
